# pfms-2024

./: CMakeLists.txt  Doxyfile  README.md  index.dox  package.xml
data/goals/: GOALS_Test1.TXT
data/rosbags/droneData1/: droneData1_0.db3  metadata.yaml
data/rosbags/droneData2/: droneData2_0.db3  metadata.yaml
data/rosbags/utest2Data/: metadata.yaml  utest2Data_0.db3
data/rosbags/utest3Data/: metadata.yaml  utest3Data_0.db3
src/: ackerman.cpp  ackerman.h  controller.cpp  controller.h  controllerinterface.h  dataEvaluation.cpp  dataEvaluation.h  goals_publisher.cpp  main_ackerman.cpp  mission.cpp  mission.h  quadcopter.cpp  quadcopter.h  tsp_search.cpp  tsp_search.h
test/: test_basic_goal (copy).cpp  test_goal.cpp  test_tsp.cpp  test_waypoint.cpp  utest (copy).cpp
